@@ -59,7 +59,8 @@ if ( !is_null( $wgTitle ) && !$wgTitle->userCanRead() ) {
 	exit;
 }
 
-if ( $search = $wgRequest->getText( 'search' ) ) {
+$search = $wgRequest->getText( 'search' );
+if( !is_null( $search ) && $search !== '' ) {
 	$wgTitle = Title::makeTitle( NS_SPECIAL, "Search" );
 	if( $wgRequest->getVal( 'fulltext' ) ||
 		!is_null( $wgRequest->getVal( 'offset' ) ) ||
